--- a/app/src/main/res/layout/doctors_list_item.xml
+++ b/app/src/main/res/layout/doctors_list_item.xml
@@ -24,25 +24,29 @@
 
         <TextView
             android:id="@+id/tv_doctor_name_find_doctor"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/poppins_bold"
             android:textColor="@color/black"
             android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/iv_doctor_pic_item"
             app:layout_constraintTop_toTopOf="@+id/iv_doctor_pic_item"
             tools:text="Mahmoud Reda" />
 
         <TextView
             android:id="@+id/tv_doctor_speciality_find_doctor"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/poppins_medium"
             android:textColor="@color/black"
             android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_doctor_name_find_doctor"
             app:layout_constraintStart_toStartOf="@+id/tv_doctor_name_find_doctor"
             app:layout_constraintTop_toBottomOf="@+id/tv_doctor_name_find_doctor"
             tools:text="Dermatology" />
