Fix bottom nav selected item remains visually highlighted

--- a/shifaa_scanner/src/main/res/layout/prescription_list_item.xml
+++ b/shifaa_scanner/src/main/res/layout/prescription_list_item.xml
@@ -30,9 +30,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="4dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,11 +65,11 @@
 
             <TextView
                 android:id="@+id/tv_medication_name_cv"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="60dp"
                 android:fontFamily="@font/poppins_bold"
                 android:text="Panadol"
                 android:textColor="@color/black"
@@ -84,6 +84,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Capsule"
                 app:layout_constraintEnd_toEndOf="@+id/tv_medication_name_cv"
@@ -92,7 +93,7 @@
 
             <TextView
                 android:id="@+id/tv_dosage"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:text="500 mg"
@@ -106,11 +107,13 @@
                 android:id="@+id/tv_duration_list_item"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="3 times a day for 5 days"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_medication"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_medication_type_cv"
                 app:layout_constraintTop_toBottomOf="@+id/tv_medication_type_cv" />
